Updated Contact Information

--- a/index.html
+++ b/index.html
@@ -637,13 +637,13 @@
                             <h4>Contact Us</h4>
                             <ul>
                                 <li>
-                                    <p><i class="fas fa-map-marker-alt"></i>Address: Michael I. Days 3756 <br>Preston Street Wichita,<br> KS 67213 </p>
+                                    <p><i class="fas fa-map-marker-alt"></i>Address:  No 1172, 14, Dr Rajkumar Road, <br>Prakashnagar, Rajajinagar,<br> Bengaluru, Karnataka - 560021 </p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+1-888705770">+1-888 705 770</a></p>
+                                    <p><i class="fas fa-phone-square"></i>Phone: <a href="tel:+91-9448169379">+91-9448169379</a></p>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-envelope"></i>Email: <a href="mailto:contactinfo@gmail.com">contactinfo@gmail.com</a></p>
+                                    <p><i class="fas fa-envelope"></i>Email: <a href="info@rv-power.in">info@rv-power.in</a></p>
                                 </li>
                             </ul>
                         </div>
@@ -656,8 +656,8 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2022 <a href="#">RV Power</a> Design By :
+            Peekaboo</p>
     </div>
     <!-- End copyright  -->
 
