--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 <li><a href="wishlist.html">Wishlist</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="gallery.html">Products</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -202,11 +202,11 @@
     <div id="slides-shop" class="cover-slides">
         <ul class="slides-container">
             <li class="text-center">
-                <img src="images/banner-01.jpg" alt="">
+                <img src="RV power images/happy.PNG" alt="">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> RV Power</strong></h1>
+                            <h1 class="m-b-20"><strong>Welcome To RV Power</strong></h1>
                             <h3 class="m-b-30"><strong>Authorized Honda Power Products Dealer</strong></h3>
                             <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
@@ -215,19 +215,19 @@
                 </div>
             </li>
             <li class="text-center">
-                <img src="images/banner-02.jpg" alt="">
+                <img src="RV power images/All_products_Catalogue.jpg" alt="">
                 <div class="container">
-                    <div class="row">
+                    <div class="row1">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Explore the all new <br> range of Honda Power Products</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
+                            <h1 class="m-b-20"><strong>Explore the all new <br>range of Honda Power Products </strong></h1>
+                            <p class="m-b-40"> <br> </p>
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
                         </div>
                     </div>
                 </div>
             </li>
             <li class="text-center">
-                <img src="images/banner-03.jpg" alt="">
+                <img src="RV power images/Generator Catalogue1.jpg" alt="">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
