--- a/cart.html
+++ b/cart.html
@@ -550,8 +550,8 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
+        <p class="footer-company">All Rights Reserved. &copy; 2023 <a href="#">RV Power</a> Design By :
+            Peekaboo</p>
     </div>
     <!-- End copyright  -->
 
