--- a/wishlist.html
+++ b/wishlist.html
@@ -495,9 +495,8 @@
 
     <!-- Start copyright  -->
     <div class="footer-copyright">
-        <p class="footer-company">All Rights Reserved. &copy; 2018 <a href="#">ThewayShop</a> Design By :
-            <a href="https://html.design/">html design</a></p>
-    </div>
+        <p class="footer-company">All Rights Reserved. &copy; 2023 <a href="#">RV Power</a> Design By :
+            Peekaboo</p>
     <!-- End copyright  -->
 
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
