Dynamic Message Box, Payment Button

--- a/contact-us.html
+++ b/contact-us.html
@@ -229,7 +229,7 @@
                     <div class="contact-form-right">
                         <h2>GET IN TOUCH</h2>
                         <p>Please fill out your requirements or queries in the below section. We will get in touch with you as soon as possible.</p>
-                        <form id="contactForm">
+                        <form action="https://formsubmit.co/33f770b50f495c1a00508a347fc08d90" method="POST">
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -239,27 +239,24 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input type="text" placeholder="Your Phone" id="phone" class="form-control" name="name" required data-error="Please enter your Phone Number">
+                                        <input type="text" class="form-control" id="name" name="Phone" placeholder="Your Phone Number"required data-error="Please enter your Phone Number">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+                                        <input type="text" placeholder="Your Email" id="email" class="form-control" name="email" required data-error="Please enter your email">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" id="subject" name="name" placeholder="Subject" required data-error="Please enter your Subject">
+                                        <textarea class="form-control" name="Message" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
                                         <div class="help-block with-errors"></div>
                                     </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <textarea class="form-control" id="message" placeholder="Your Message" rows="4" data-error="Write your message" required></textarea>
-                                        <div class="help-block with-errors"></div>
-                                    </div>
+                                    <input type="hidden" name="_subject" value="New submission!">
+                                    <input type="hidden" name="_captcha" value="false">
+                                    <input type="hidden" name="_template" value="table">
                                     <div class="submit-button text-center">
                                         <button class="btn hvr-hover" id="submit" type="submit">Send Message</button>
                                         <div id="msgSubmit" class="h3 text-center hidden"></div>
