--- a/shop.html
+++ b/shop.html
@@ -736,7 +736,7 @@
 					</div>
 					<div class="col-lg-4 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<h3>Social Media</h3>
+							<!-- <h3>Social Media</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							<ul>
                                 <li><a href="#"><i class="fab fa-facebook" aria-hidden="true"></i></a></li>
@@ -746,7 +746,7 @@
                                 <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a></li>
                                 <li><a href="#"><i class="fab fa-whatsapp" aria-hidden="true"></i></a></li>
-                            </ul>
+                            </ul> -->
 						</div>
 					</div>
 				</div>
